# rae-time-tracker-and-invoice

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  release-please-config.json
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  ruff.toml
backend/app/: __init__.py  config.py  extensions.py
backend/app/models/: __init__.py  category_tag.py  client.py  invoice.py  invoice_line_item.py  project.py  time_entry.py  time_entry_tag.py  user_profile.py
backend/app/routes/: __init__.py  category_tags.py  clients.py  health.py  invoices.py  projects.py  time_entries.py  user_profile.py
backend/app/schemas/: __init__.py  category_tag.py  client.py  invoice.py  project.py  time_entry.py  user_profile.py
backend/app/services/: __init__.py  invoice_service.py  pdf_service.py  time_entry_service.py
backend/app/templates/: invoice.html
backend/migrations/: env.py
backend/migrations/versions/: 20250405_000000_initial_migration.py  20260411_000000_make_time_entry_project_nullable.py  20260418_000000_millisecond_precision.py  20260427_000000_line_item_time_entry_name.py
backend/tests/: __init__.py  conftest.py  test_category_tags.py  test_clients.py  test_health.py  test_invoices.py  test_projects.py  test_time_entries.py  test_user_profile.py
docs/: combine-same-day-line-items.md  rae-time-tracker-and-invoice-init-plan.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  (+1 more)
(+58 files in other folders)
