[project]
name = "rae-time-tracker-api"
version = "0.1.2"
description = "API for Rae Time Tracker"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.0",
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
